src/objects/Sales_Competency__c/Sales_Competency__c.object-meta.xml
<CustomObject>
    <description>Sales Competency, Sales Competency Rating, and Development Action custom objects make up the PMT Sales Competency module for assessing sales employees on selling competencies and identifying growth/development areas.</description>
    <label>Sales Competency</label>
    <nameField>
        <label>Sales Competency Assessment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Competency</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>