src/objects/Sales_Competency__c/fields/Development_Discussion_Held_Date__c.field-meta.xml
<CustomField>
    <fullName>Development_Discussion_Held_Date__c</fullName>
    <inlineHelpText>Confirms the date the manager discussed the assessment and development suggestions with the employee.</inlineHelpText>
    <label>Development Discussion Held Date</label>
    <type>Date</type>
</CustomField>