src/objects/Sales_Competency__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <label>Job Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Leader</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>