src/objects/Sales_Competency__c/fields/Level_1_Manager__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 1 Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Competency1</relationshipName>
    <type>Lookup</type>
</CustomField>