src/objects/Sales_Competency__c/fields/No_Ratings_Complete__c.field-meta.xml
<CustomField>
    <fullName>No_Ratings_Complete__c</fullName>
    <description>Rolls up the number of complete ratings for validation.</description>
    <label>No Ratings Complete</label>
    <summarizedField>Sales_Competency_Rating__c.Rating_Done__c</summarizedField>
    <summaryForeignKey>Sales_Competency_Rating__c.Sales_Competency_Assessment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>