src/objects/Sales_Competency__c/fields/Reason_for_Role_Category_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Role_Category_Change__c</fullName>
    <inlineHelpText>If the manager changes the employee&apos;s role category, which also changes the competency expectations for the role, then a reason for the change must be provided.</inlineHelpText>
    <label>Reason for Role Category Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>