src/objects/Sales_Competency__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region Field from the Sales Competency data file.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia Pacific Region</fullName>
            </value>
            <value>
                <fullName>Canada Region</fullName>
            </value>
            <value>
                <fullName>Central Latin America</fullName>
            </value>
            <value>
                <fullName>Europe Region</fullName>
            </value>
            <value>
                <fullName>USA Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>