src/objects/Sales_Competency__c/fields/Role_Category__c.field-meta.xml
<CustomField>
    <fullName>Role_Category__c</fullName>
    <inlineHelpText>If the manager changes the employee&apos;s role category, which also changes the competency expectations for the role, then a reason for the change must be provided.</inlineHelpText>
    <label>Role Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>