src/objects/Sales_Competency__c/fields/SBE__c.field-meta.xml
<CustomField>
    <fullName>SBE__c</fullName>
    <formula>Text(User__r.SBU_User__c )</formula>
    <label>SBE</label>
    <type>Text</type>
</CustomField>