src/objects/Sales_Competency__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>TEXT(User__r.SBU_User__c)</formula>
    <label>SBU</label>
    <type>Text</type>
</CustomField>