src/objects/Sales_Competency__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Defines the status of the assessment process and who owns step:
Step 0: In Process
Step 1: Draft (Manager)
Step 2: In Review (Employee)
Step 3: Review Action Plan (Manager)
Step 4: Final Approval (Manager)

(Opt Out - Employee will not be assessed)</inlineHelpText>
    <label>Status (Owner)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Assessment (Employee)</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Self Assessment (Employee)</label>
            </value>
            <value>
                <fullName>Draft (Manager)</fullName>
                <color>#E27001</color>
                <label>Draft (Manager)</label>
            </value>
            <value>
                <fullName>In Review (Employee)</fullName>
                <color>#A845DC</color>
                <label>In Review (Employee)</label>
            </value>
            <value>
                <fullName>Review Action Plan (Manager)</fullName>
                <color>#33CCFF</color>
                <label>Review Action Plan (Manager)</label>
            </value>
            <value>
                <fullName>Final Approval (Manager)</fullName>
                <color>#78C953</color>
                <label>Final Approval (Manager)</label>
            </value>
            <value>
                <fullName>Opt Out</fullName>
                <color>#A53711</color>
                <label>Opt Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>