src/objects/Sales_Competency__c/validationRules/Discussion_Date_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Discussion_Date_Not_Allowed</fullName>
    <active>true</active>
    <description>Do not allow Discussion Date to be entered if All Ratings not complete.</description>
    <errorConditionFormula>Not(ISBLANK( Development_Discussion_Held_Date__c )) &amp;&amp;  
(All_Ratings_Complete__c = &quot;No&quot; || All_Ratings_Complete__c = &quot;Not Started&quot;)</errorConditionFormula>
    <errorDisplayField>Assessment_Year__c</errorDisplayField>
    <errorMessage>Please do not enter a Development Discussion Date until all ratings are complete.</errorMessage>
</ValidationRule>