src/objects/Sales_Competency__c/validationRules/Manager_Employee_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_Employee_Status</fullName>
    <active>true</active>
    <description>Allow Employee to only move to valid status.</description>
    <errorConditionFormula>User__r.Id  =  $User.Id  &amp;&amp; ISCHANGED(Status__c)  &amp;&amp; 
NOT(ISPICKVAL(Status__c, &quot;Review Action Plan (Manager)&quot;) ||
ISPICKVAL(Status__c, &quot;In Review (Employee)&quot;) || 
ISPICKVAL(Status__c, &quot;Draft (Manager)&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You may only change status to Review Action Plan.</errorMessage>
</ValidationRule>