src/objects/Sales_Competency__c/validationRules/Prevent_Assessment_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Assessment_Name_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You may not change the assessment name.</errorMessage>
</ValidationRule>