src/objects/Sales_Competency__c/validationRules/Prevent_Status_back_to_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Status_back_to_Draft</fullName>
    <active>true</active>
    <description>Prevent the Status field from being set backwards</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Draft (Manager)&quot;)  &amp;&amp;

(
ISPICKVAL(PRIORVALUE( Status__c), &quot;In Review (Employee)&quot;) ||
ISPICKVAL(PRIORVALUE( Status__c) , &quot;Review Action Plan (Manager)&quot; ) ||
ISPICKVAL(PRIORVALUE( Status__c) ,&quot;Final Approval (Manager)&quot; )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status may not be moved back to previous stage.</errorMessage>
</ValidationRule>