src/objects/Sales_Competency__c/validationRules/Prohibit_Future_Discussion_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prohibit_Future_Discussion_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Development_Discussion_Held_Date__c &gt; Today()</errorConditionFormula>
    <errorDisplayField>Development_Discussion_Held_Date__c</errorDisplayField>
    <errorMessage>Please do not enter Discussion Date in the future.</errorMessage>
</ValidationRule>