src/objects/Sales_Competency__c/validationRules/Prohibit_User_Changing_Own_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Prohibit_User_Changing_Own_Data</fullName>
    <active>true</active>
    <errorConditionFormula>(User__r.Id  =  $User.Id)  &amp;&amp;
(
 ISCHANGED( Opt_Out_Reason__c ) ||
 ISCHANGED( Opt_Out_Other_Reason__c ) ||
 ISCHANGED( Job_Title__c ) ||
 ISCHANGED( Role_Category__c ) ||
 ISCHANGED( Reason_for_Role_Category_Change__c ) ||
 ISCHANGED( Development_Discussion_Held_Date__c ) ||
 (ISCHANGED( OwnerId ) &amp;&amp;  ISPICKVAL(Status__c, &apos;Self Assessment (Employee)&apos;))

)</errorConditionFormula>
    <errorMessage>You may not change your own assessment data.</errorMessage>
</ValidationRule>