src/objects/Sales_Competency__c/validationRules/Require_Action_Plan_to_Final_Status_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Action_Plan_to_Final_Status_only</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  Status__c  , &quot;Final Approval (Manager)&quot;) &amp;&amp; 
NOT(ISPICKVAL(PRIORVALUE( Status__c) , &quot;Review Action Plan (Manager)&quot; ) ||
ISPICKVAL(PRIORVALUE( Status__c) , &quot;Final Approval (Manager)&quot; )

)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Review Action Plan step cannot be skipped.</errorMessage>
</ValidationRule>