src/objects/Sales_Competency__c/validationRules/Require_All_Actions_to_be_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_All_Actions_to_be_Accepted</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Final Approval (Manager)&quot;) &amp;&amp;
  ISCHANGED(Status__c) &amp;&amp;
 Actions_Accepted__c &lt;&gt;  No_Development_Actions__c</errorConditionFormula>
    <errorMessage>All Development Actions must be Accepted before Final Approval.</errorMessage>
</ValidationRule>