src/objects/Sales_Competency__c/validationRules/Require_all_ratings_to_be_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_all_ratings_to_be_complete</fullName>
    <active>false</active>
    <description>Require all ratings to be complete before assigning to User</description>
    <errorConditionFormula>(All_Ratings_Complete__c = &quot;No&quot; || All_Ratings_Complete__c = &quot;Not Started&quot;) &amp;&amp;
(OwnerId = User__c ||
(ISPICKVAL( Status__c , &quot;In Review (Employee)&quot;) &amp;&amp;
ISPICKVAL(Priorvalue(Status__c), &quot;Draft (Manager)&quot;))
)</errorConditionFormula>
    <errorMessage>You must complete all ratings before assigning Assessment to User or changing the Status.</errorMessage>
</ValidationRule>