src/objects/Sales_Competency__c/validationRules/Require_Assignment_to_Employee.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Assignment_to_Employee</fullName>
    <active>true</active>
    <description>Require Assignment to Employee before moved to In Review (Employee).</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;In Review (Employee)&quot;) 
&amp;&amp;
(User__r.Id  &lt;&gt;  OwnerId )</errorConditionFormula>
    <errorMessage>Please change Owner to Employee before changing Status to In Review (Employee).</errorMessage>
</ValidationRule>