src/objects/Sales_Competency__c/validationRules/Require_Dev_Discussion_Held_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Dev_Discussion_Held_Date</fullName>
    <active>true</active>
    <errorConditionFormula>( ISPICKVAL( Status__c , &quot;In Review (Employee&quot;) 
&amp;&amp;  ISBLANK( Development_Discussion_Held_Date__c ) )
&amp;&amp;
(User__r.Id  =  OwnerId )</errorConditionFormula>
    <errorDisplayField>Development_Discussion_Held_Date__c</errorDisplayField>
    <errorMessage>Please enter the Development Discussion Held Date</errorMessage>
</ValidationRule>