src/objects/Sales_Competency__c/validationRules/Require_Development_Actions.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Development_Actions</fullName>
    <active>true</active>
    <description>Require at least one development Actions before Action Plan Review.</description>
    <errorConditionFormula>ISPICKVAL(Status__c , &quot;Review Action Plan (Manager)&quot; )&amp;&amp;
Development_Actions_Identified__c = &quot;No&quot; &amp;&amp;
ISPICKVAL(PRIORVALUE(Status__c), &quot;In Review (Employee)&quot;)</errorConditionFormula>
    <errorMessage>Please add at least one Development Actions before submitting for Manager  Review.</errorMessage>
</ValidationRule>