src/objects/Sales_Competency__c/validationRules/Require_Development_Discussion_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Development_Discussion_Date</fullName>
    <active>true</active>
    <description>Require Development Discussion Date Held when Status is change to In Review</description>
    <errorConditionFormula>ISBLANK( Development_Discussion_Held_Date__c ) &amp;&amp;  
ISPICKVAL( Status__c , &quot;In Review (Employee)&quot;)</errorConditionFormula>
    <errorDisplayField>Development_Discussion_Held_Date__c</errorDisplayField>
    <errorMessage>Please enter the date of development discussion.</errorMessage>
</ValidationRule>