src/objects/Sales_Competency__c/validationRules/Require_In_Review_to_Review_Action_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_In_Review_to_Review_Action_only</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  Status__c  , &quot;Review Action Plan (Manager)&quot;) &amp;&amp; 
NOT(ISPICKVAL(PRIORVALUE(Status__c) , &quot;In Review (Employee)&quot;) ||
ISPICKVAL(PRIORVALUE(Status__c) , &quot;Review Action Plan (Manager)&quot;) 


)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>The Employee Review Step cannot be skipped.</errorMessage>
</ValidationRule>