src/objects/Sales_Competency__c/validationRules/Require_Other_Reason_if_Opt_Out_is_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Other_Reason_if_Opt_Out_is_Other</fullName>
    <active>true</active>
    <description>Require Reason if Opt Out Other is Selected.</description>
    <errorConditionFormula>ISPICKVAL( Opt_Out_Reason__c , &quot;Other&quot;) &amp;&amp;  ISBLANK( Opt_Out_Other_Reason__c )</errorConditionFormula>
    <errorDisplayField>Opt_Out_Other_Reason__c</errorDisplayField>
    <errorMessage>Please enter additional explanation of &quot;Other&quot; Opt Out Reason</errorMessage>
</ValidationRule>