src/objects/Sales_Competency__c/validationRules/Require_Reason_for_Role_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_for_Role_Change</fullName>
    <active>true</active>
    <description>Require Reason for change if the Role Category is changed.</description>
    <errorConditionFormula>ISCHANGED(  Role_Category__c  ) &amp;&amp;  ISBLANK( Reason_for_Role_Category_Change__c )</errorConditionFormula>
    <errorDisplayField>Reason_for_Role_Category_Change__c</errorDisplayField>
    <errorMessage>Please enter a Reason for Role Category change.</errorMessage>
</ValidationRule>