src/objects/Sales_Competency__c/validationRules/Require_Reason_if_Status_is_Opt_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_if_Status_is_Opt_Out</fullName>
    <active>true</active>
    <description>Require Reason if Opt Out is Selected.</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Opt Out&quot;)  &amp;&amp;   ISPICKVAL(Opt_Out_Reason__c , &quot;&quot;) &amp;&amp;
( User__r.Id &lt;&gt; $User.Id )</errorConditionFormula>
    <errorDisplayField>Opt_Out_Reason__c</errorDisplayField>
    <errorMessage>Please Select an Opt Out Reason</errorMessage>
</ValidationRule>