src/objects/Sales_Competency__c/validationRules/Role_Category_can_only_change_in_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Category_can_only_change_in_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Role_Category__c ) &amp;&amp; 
NOT(ISPICKVAL( Status__c , &quot;Draft (Manager)&quot;)||
    ISPICKVAL( Status__c , &quot;Opt Out&quot;) ||
    ISPICKVAL( Status__c , &quot;Self Assessment (Employee)&quot;)
)</errorConditionFormula>
    <errorDisplayField>Role_Category__c</errorDisplayField>
    <errorMessage>Role Category can only be changed while in Self Assessment or Draft status.</errorMessage>
</ValidationRule>