src/objects/Sales_Competency__c/validationRules/Status_not_be_changed_to_Self_Assessment.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_not_be_changed_to_Self_Assessment</fullName>
    <active>true</active>
    <errorConditionFormula>((PRIORVALUE( Status__c ) &lt;&gt; &apos;Self Assessment (Employee)&apos;) &amp;&amp;   ISPICKVAL(Status__c, &apos;Self Assessment (Employee)&apos;)) &amp;&amp; ($Profile.Name &lt;&gt; &quot;System Administrator&quot;) &amp;&amp; ($Profile.Name &lt;&gt; &quot;Honeywell System Administrator (Non US)&quot;) &amp;&amp; $Profile.Name &lt;&gt; &quot;Developer Administrator (Non US)&quot;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot change the Status back to Self Assessment (Employee)</errorMessage>
</ValidationRule>