src/objects/Sales_Competency__c/listViews/My_2016_Assessment.listView-meta.xml
<ListView>
    <fullName>My_2016_Assessment</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My 2016 Assessment</label>
    <language>en_US</language>
</ListView>