src/objects/Sales_Competency__c/listViews/My_Assessment.listView-meta.xml
<ListView>
    <fullName>My_Assessment</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Level_1_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Region__c</columns>
    <columns>All_Ratings_Complete__c</columns>
    <columns>Development_Actions_Identified__c</columns>
    <columns>Number_Development_Actions__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SBU__c</columns>
    <columns>Job_Category__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>My Assessment Tasks</label>
</ListView>