src/objects/Sales_Competency__c/listViews/My_Direct_Reports_Assessments.listView-meta.xml
<ListView>
    <fullName>My_Direct_Reports_Assessments</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Level_1_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Region__c</columns>
    <columns>All_Ratings_Complete__c</columns>
    <columns>Development_Actions_Identified__c</columns>
    <columns>Number_Development_Actions__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SBU__c</columns>
    <columns>Job_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Direct_Report_Assessment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Assessment_Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <label>My Direct Reports Assessment Tasks</label>
    <language>en_US</language>
</ListView>