src/objects/Sales_Competency__c/listViews/X2015_Sales_Support_Assessments.listView-meta.xml
<ListView>
    <fullName>X2015_Sales_Support_Assessments</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Level_1_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Region__c</columns>
    <columns>All_Ratings_Complete__c</columns>
    <columns>Development_Actions_Identified__c</columns>
    <columns>Number_Development_Actions__c</columns>
    <columns>SBE__c</columns>
    <columns>Job_Category__c</columns>
    <columns>Country__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assessment_Year__c</field>
        <operation>equals</operation>
        <value>2015</value>
    </filters>
    <filters>
        <field>Job_Category__c</field>
        <operation>equals</operation>
        <value>Sales Support</value>
    </filters>
    <label>2015 Sales Support Assessments</label>
    <language>en_US</language>
</ListView>