src/objects/Sales_Competency__c/listViews/X2017_Sales_Leader_Assessments.listView-meta.xml
<ListView>
    <fullName>X2017_Sales_Leader_Assessments</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Year__c</columns>
    <columns>Job_Category__c</columns>
    <columns>Role_Category__c</columns>
    <columns>Status_Image__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Level_1_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assessment_Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <filters>
        <field>Job_Category__c</field>
        <operation>equals</operation>
        <value>Sales Leader</value>
    </filters>
    <label>2017 Sales Leader Assessments</label>
    <language>en_US</language>
</ListView>